# cs496s-final-project

./: .gitignore  DDR.ipynb  README.md  classifier.py  conftest.py  controller.py  features.py  file_stream.py  main.py  pyproject.toml  record.py  stomp_detector.py
models/: mlp_all_moves.onnx  mlp_five_directions.onnx  mlp_left_right.onnx
tests/: test_adaptive.py  test_components.py  verify_file_input.py
